# warframe-metrics

./: .flake8  .gitignore  LICENSE.rst  README.rst  READMEPYPI.md  TODO  noxfile.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/autosummary/: module.rst
docs/about/: index.rst
docs/api_reference/: index.rst
docs/contributor_guide/: index.rst
docs/user_guide/: index.rst
src/warframe_metrics/: main.py
src/warframe_metrics/analysis/: __init__.py  models.py
src/warframe_metrics/market/: __init__.py  prime.py
src/warframe_metrics/utils/: __init__.py  collect_data.py  constants.py  datetime_utils.py  schema.py
src/warframe_metrics/utils.py/: collect_data.py  constants.py  schema.py
tests/: __init__.py  conftest.py  test_merge.py  test_prime.py  test_utils.py
