[tool.poetry]
name = "warframe-metrics"
version = "0.1.1"
license = "MIT"
description = "Warframe market metrics package."
authors = ["Rajiv Sarvepalli <rajiv@sarvepalli.net>"]
readme = "READMEPYPI.md"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
pandas = "^1.2.4"
desert = "^2020.11.18"
alive-progress = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.1"
mypy = "^0.800"
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.8.0"
xdoctest = "^0.15.0"
Sphinx = "^3.5.4"
codecov = "^2.1.11"
sphinx-copybutton = "^0.3.1"
pydata-sphinx-theme = "^0.6.3"
pep8-naming = "^0.11.1"
Pygments = "^2.9.0"
reorder-python-imports = "^2.3.6"
sphinx-autodoc-typehints = "^1.11.1"
flake8-rst-docstrings = "^0.0.14"
pre-commit = "^2.9.3"
pre-commit-hooks = "^3.4.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["warframe_metrics"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.pytest.ini_options]
requests_mock_case_sensitive=false
